--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "dependencies": {
     "express": "~3.4.0",
-    "express3-handlebars": "0.4.x"
+    "express-jwt": "^3.3.0",
+    "express3-handlebars": "0.4.x",
+    "jsonwebtoken": "^5.7.0",
+    "mongoose": "^4.4.8",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
