--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.7.1",
     "express": "~3.4.0",
     "express-jwt": "^3.3.0",
     "express3-handlebars": "0.4.x",
